--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,14 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
     color: #333;
     line-height: 1.6;
 }
 
 header {
-    background-color: #222;
+    background-color: #E9F2E5;
     padding: 20px 0;
-    color: #fff;
+    color: #cfebf7;
     width: 100%;
 }
 
@@ -33,7 +32,7 @@ header {
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
-    color: #fff;
+    color: #021753;
 }
 
 nav ul {
@@ -46,7 +45,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #021753;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s ease;
@@ -57,75 +56,58 @@ nav ul li a:hover {
 }
 
 /* Hero Section */
+/* Estilos para la sección hero */
 .hero {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
+    padding: 50px;
+    background-color: #E9F2E5;
+    max-width: 100%; /* Asegurar que ocupe todo el ancho de la pantalla */
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .hero-content {
-    max-width: 600px;
+    flex: 1; /* Asegura que el texto ocupe el 50% del ancho */
+    max-width: 60%; /* Limitar el ancho del contenido */
+    text-align: left; /* Alínea el contenido a la izquierda */
 }
 
-.hero-content h1 {
-    font-size: 48px;
+#title h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #0b2a32;
     margin-bottom: 20px;
-    color: #333;
+}
+
+#title img {
+    vertical-align: middle;
+    margin-left: 10px;
 }
 
 .hero-content p {
-    font-size: 18px;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    color: #2d3748;
     margin-bottom: 20px;
-    color: #666;
 }
 
-.btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #f39c12;
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.btn:hover {
-    background-color: #e67e22;
+.hero-image {
+    flex: 1; /* Asegura que la imagen ocupe el otro 50% */
+    max-width: 60%; /* Limitar el ancho de la imagen */
+    text-align: right; /* Coloca la imagen a la derecha */
 }
 
 .hero-image img {
-    max-width: 100%;
+    width: 100%; /* Ajusta la imagen al 100% del contenedor */
     height: auto;
+    object-fit: contain; /* Mantiene las proporciones */
 }
-
-/* Info Boxes */
-.info-boxes {
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    justify-content: space-between;
-}
-
-.info-box {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 15px;
-    margin: 10px 0;
-    text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.info-box p {
-    color: #333;
-    margin: 0;
-}
-
 /* Coin Markets Section */
 .coin-markets {
-    background-color: #f9f9f9;
+    background-color: #F7F4EF;
     padding: 50px 0;
 }
 
@@ -368,56 +350,47 @@ body {
     box-sizing: border-box;
 }
 
-/* Sección de Exchange */
-.exchange {
-    padding: 50px 0;
-    background-color: #f4f4f4;
-}
-
-/* Estilo para el título */
-.exchange h2 {
-    text-align: center; /* Centra el texto del h2 */
-    margin: 0 auto; /* Asegura que el margen sea automático */
-    width: fit-content; /* Ajusta el ancho del h2 al contenido */
-    font-size: 2rem; /* Tamaño del texto del título */
-}
-
-/* Estilos para las tarjetas */
-.exchange-cards {
-    display: flex;
-    justify-content: center; /* Centra las tarjetas horizontalmente */
-    gap: 20px; /* Espacio entre las tarjetas */
-    flex-wrap: nowrap; /* Mantiene las tarjetas en una sola fila */
-}
-
-.exchange-card {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+/* Features Section */
+.features {
+    padding: 40px;
+    background-color: #f9f8fa;
     text-align: center;
-    max-width: 300px; /* Ancho máximo de las tarjetas */
-    flex: 1 1 auto; /* Permite que las tarjetas se ajusten proporcionalmente */
 }
 
-.exchange-card img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 15px;
+.features h2 {
+    font-size: 2em;
+    margin-bottom: 60px;
+    color: #333;
 }
 
-.exchange-card h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
+.features-grid {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 10px;
 }
 
-.exchange-card p {
-    font-size: 1rem;
+.feature-tile {
+    border-radius: 12px;
+    padding: 20px;
+    width: 250px;
+    text-align: left;
+}
+
+.feature-icon-small {
+    width: 90px;
+    height: 80px;
+    margin-right: 10px; 
+}
+.feature-tile p {
+    font-size: 0.9em;
     color: #666;
+    margin-top: 10px;
+    line-height: 1.5;
 }
+/*mobile app */
 .mobile-app {
     padding: 40px 20px;
-    background-color: #f8f8f8;
+    background-color: #effcf7;
 }
 
 .container {
@@ -458,7 +431,7 @@ h2 {
 
 /* Estilos del primer footer */
 .footer-1 {
-    background-color: #000000;
+    background-color: #4eb16f;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -466,7 +439,7 @@ h2 {
 }
 .footer-1 a {
     font-size: 15px; 
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     margin: 0 10px;
 }
@@ -475,6 +448,7 @@ h2 {
     align-items: center;
 }
 .footer-1 .logo {
+    color: #ffffff;
     font-size: 24px;
     font-weight: bold;
     margin-right: 20px;
@@ -517,6 +491,11 @@ h2 {
 .footer-2 .footer-right a img {
     width: 90px; /* Ajusta el tamaño según sea necesario */
     height: 90px;
+}
+
+.footer-2 .footer-right a:hover {
+    background-color: #333333;
+    color: white;
 }
 
 .footer-2 .footer-right a:hover {
